ontowiki-cubeviz (0.5) lod2; urgency=low

  * intitial version of cubeviz for OntoWiki 0.9.6

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Wed, 28 Nov 2012 14:17:25 +0100