@@ -1,10 +1,13 @@
 default:
 
 prepare:
+	rm -f ../../Makefile
+	rm -f ../../classes/foreign/EasyRdf/LICENSE.md
+	rm -f ../../public/images/semicon/LICENSE.md
 
 clean:
-	rm -rf ../../files
-	rm -rf ../../*.debhelper.log
-	rm -rf ../../*.substvars
-	rm -rf ../../ontowiki-cubeviz
+	rm -rf ../files
+	rm -rf ../*.debhelper.log
+	rm -rf ../*.substvars
+	rm -rf ../ontowiki-cubeviz
 
