@@ -1,3 +1,4 @@
+/etc/ontowiki-cubeviz/doap.n3-dist usr/share/ontowiki-cubeviz/doap.n3
 /etc/ontowiki-cubeviz/doap.n3 usr/share/ontowiki-cubeviz/doap.n3
 /etc/ontowiki-cubeviz/ChartConfig.js usr/share/ontowiki-cubeviz/ChartConfig.js
 /usr/share/ontowiki-cubeviz /usr/share/ontowiki/extensions/cubeviz
