@@ -1,3 +1,11 @@
+ontowiki-cubeviz (0.8.1) lod2; urgency=low
+
+  * Exporter: use is_array before uri check
+  * Add check which function to get cacheDir is valid
+  * small modifications on Query.php
+
+ -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Fri, 12 Jul 2013 13:24:06 +0200
+
 ontowiki-cubeviz (0.5) lod2; urgency=low
 
   * intitial version of cubeviz for OntoWiki 0.9.6
